Modifiche sul BE: -- aggiungere città e togliere nazione, -- aggiunto modifica utente su openAPI, -- openaAPI aggiornata, -- aggiunta la gestione dei widge, -- ordine per profilo utente.
